--- a/public/css/main.css
+++ b/public/css/main.css
@@ -53,10 +53,16 @@ header, carousel
 
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-session
+sessions
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-.session {
+.session-signup {
   background: aqua;
+  height: 100vh;
+  width: 100vw;
+}
+
+.session-login {
+  background: teal;
   height: 100vh;
   width: 100vw;
 }
