changed controller name in app.js, moved all functions and variable into one controller

--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -7,15 +7,15 @@
   <form>
     <!-- first name -->
     <div>
-      <input ng-model="sess.signupForm.firstname" autocomplete="off" maxlength="30" minlength="2" placeholder="first name" type="text" required>
+      <input ng-model="main.signupForm.firstname" autocomplete="off" maxlength="30" minlength="2" placeholder="first name" type="text" required>
     </div>
     <!-- last name -->
     <div>
-      <input ng-model="sess.signupForm.lastname" autocomplete="off" maxlength="30" minlength="2" placeholder="last name" type="text" required>
+      <input ng-model="main.signupForm.lastname" autocomplete="off" maxlength="30" minlength="2" placeholder="last name" type="text" required>
     </div>
     <!-- email -->
     <div>
-      <input ng-model="sess.signupForm.email" autocomplete="off" maxlength="50" minlength="5" placeholder="email address" type="email" required>
+      <input ng-model="main.signupForm.email" autocomplete="off" maxlength="50" minlength="5" placeholder="email address" type="email" required>
     </div>
     <!-- message -->
     <div>
