--- a/public/partials/game-view-all.html
+++ b/public/partials/game-view-all.html
@@ -5,7 +5,7 @@
   </div>
   <!-- all gamess -->
   <ul>
-    <li ng-repeat="games in gameCon.allGames">
+    <li ng-repeat="games in main.allGames">
       {{games.title}}
     </li>
   </ul>
