--- a/public/partials/game-view.html
+++ b/public/partials/game-view.html
@@ -34,7 +34,7 @@
     <p>user added comments 2</p>
     <p>user added comments 3</p>
   </div>
-  <form ng-submit="gameCon.comment()">
+  <form ng-submit="main.comment()">
     <!-- comments -->
     <div>
       <textarea rows="8" cols="80"></textarea>
