--- a/public/partials/session-login.html
+++ b/public/partials/session-login.html
@@ -4,18 +4,18 @@
     <div>
       <h1>login</h1>
     </div>
-    <form ng-submit="sess.login()">
+    <form ng-submit="main.login()">
       <div>
-        <input name="username" ng-model="sess.loginForm.username" type="text" placeholder="username" required>
+        <input name="username" ng-model="main.loginForm.username" type="text" placeholder="username" required>
       </div>
       <div>
-        <input name="password" ng-model="sess.loginForm.password" type="password" placeholder="password" required>
+        <input name="password" ng-model="main.loginForm.password" type="password" placeholder="password" required>
       </div>
       <button type="submit" class="btn btn-primary">login</button>
     </form>
 
-    <div ng-if="sess.currentUser">
-      Welcome: {{sess.currentUser}}!
+    <div ng-if="main.currentUser">
+      Welcome: {{main.currentUser}}!
     </div>
   </div>
 </div> <!-- /.session-login -->
