--- a/public/partials/nav.html
+++ b/public/partials/nav.html
@@ -22,7 +22,7 @@
     </ul>
     <ul class="navbar-nav">
       <li ng-if="main.currentUser" class="nav-item">
-        <a ng-click="main.changeInclude('user-view')" class="nav-link">profile</a>
+        <a ng-click="main.changeInclude('user-view'); main.getUserCreatedGames()" class="nav-link">profile</a>
       </li>
       <li ng-if="main.currentUser" class="nav-item">
         <a ng-click="main.changeInclude('game-create')" class="nav-link">add game</a>
