--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -1,12 +1,12 @@
 <!-- header -->
 <div class="header">
-  <div id="carousel-position" class="carousel slide" data-ride="carousel">
+  <div id="slide" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#carousel-position" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-position" data-slide-to="1"></li>
-      <li data-target="#carousel-position" data-slide-to="2"></li>
-      <li data-target="#carousel-position" data-slide-to="3"></li>
-      <li data-target="#carousel-position" data-slide-to="4"></li>
+      <li data-target="#slide" data-slide-to="0" class="active"></li>
+      <li data-target="#slide" data-slide-to="1"></li>
+      <li data-target="#slide" data-slide-to="2"></li>
+      <li data-target="#slide" data-slide-to="3"></li>
+      <li data-target="#slide" data-slide-to="4"></li>
     </ol>
     <div class="carousel-inner">
       <!-- image 1 -->
@@ -31,12 +31,12 @@
       </div>
     </div>
     <!-- left controller -->
-    <a class="carousel-control-prev" href="#carousel-position" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#slide" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
     <!-- right controller -->
-    <a class="carousel-control-next" href="#carousel-position" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#slide" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
