--- a/public/partials/nav.html
+++ b/public/partials/nav.html
@@ -1,11 +1,10 @@
 <!-- navbar -->
 <nav class="navbar fixed-top navbar-expand-md navbar-dark">
   <a ng-click="main.changeInclude('header')" class="navbar-brand" href="#">WASD.it</a>
-  <!-- <a class="navbar-brand" href="#home">WASD.it</a> -->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+  <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a ng-click="main.changeInclude('header')" class="nav-link">home</a>
@@ -21,18 +20,19 @@
       </li>
     </ul>
     <ul class="navbar-nav">
-      <li ng-if="main.currentUser" class="nav-item">
-        <a ng-click="main.changeInclude('user-view'); main.getUserCreatedGames()" class="nav-link">profile</a>
+      <!-- profile / add game / logout -->
+      <li ng-if="main.currentUser" class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{main.currentUser}}
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a ng-click="main.changeInclude('user-view'); main.getUserCreatedGames()" class="dropdown-item nav-item nav-link">profile</a>
+              <a ng-click="main.changeInclude('game-create')" class="dropdown-item nav-item nav-link">add game</a>
+            <div class="dropdown-divider"></div>
+              <a ng-click="main.changeInclude('header'); main.logout()" class="dropdown-item nav-item nav-link">logout</a>
+        </div>
       </li>
-      <li ng-if="main.currentUser" class="nav-item">
-        <a ng-click="main.changeInclude('game-create')" class="nav-link">add game</a>
-      </li>
-      <li ng-if="main.currentUser" class="nav-item">
-        <a ng-click="main.changeInclude('game-edit')" class="nav-link">edit game</a>
-      </li>
-      <li ng-if="main.currentUser" class="nav-item">
-        <a ng-click="main.changeInclude('header'); main.logout()" class="nav-link">logout</a>
-      </li>
+      <!-- signup / login -->
       <li ng-if="main.showNavItem" class="nav-item">
         <a ng-click="main.changeInclude('session-signup')" class="nav-link">signup</a>
       </li>
