added style to partials: about, contact, footer, nav, session-login, session-signup

--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -1,8 +1,18 @@
-<!-- about -->
 <div class="about" id="about">
-  <h1>about</h1>
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <div class="container">
+    <div class="row justify-content-center">
+      <h1>about us</h1>
+    </div>
+    <div class="about-p row align-items-center">
+      <div class="col-md col-md-6 offset-md-3">
+        Duo accumsan phaedrum vulputate id, nam consul consectetuer te. Sumo inani omittantur eum id, duis fuisset sed ut. Dicunt erroribus necessitatibus nam ea, id omnes admodum sed. Cu ius omnes quidam, ei habeo equidem his. Habemus persequeris adversarium ne eum, ei qui magna nemore fuisset. Ei vocibus principes scripserit vis, in nam novum accusam instructior. His feugait verterem id.
+      </div>
+      <div class="col-md col-md-6 offset-md-3">
+        Has ea eius bonorum, congue scripserit disputationi in eos. At agam semper complectitur pri, ad epicuri nominavi vel, case appetere eos at. Oportere principes has ne, usu omnis animal convenire ut. Oratio legere accommodare vim ad. Et eos aliquam molestie, vel audire sensibus suscipiantur an.
+      </div>
+      <div class="col-md col-md-6 offset-md-3">
+        In graeco invenire quaerendum sit, probo paulo mea an. An ius agam tacimates accusamus, id inani facilis maiestatis sea, ius elit utamur latine ut. Euripidis moderatius et vis, sed fugit similique posidonium ex, usu nullam equidem ad. Iriure suscipiantur nec an, ea eos aliquando complectitur. Est at ullum quando, at invenire periculis qui.
+      </div>
+    </div>
+  </div>
 </div>
