--- a/public/partials/nav.html
+++ b/public/partials/nav.html
@@ -7,16 +7,16 @@
   <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a ng-click="main.changeInclude('header')" class="nav-link">home</a>
+        <a ng-click="main.changeInclude('header')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">home</a>
       </li>
       <li class="nav-item">
-        <a ng-click="main.changeInclude('game-view-all')" class="nav-link">games</a>
+        <a ng-click="main.changeInclude('game-view-all')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">games</a>
       </li>
       <li class="nav-item">
-        <a ng-click="main.changeInclude('about')" class="nav-link">about</a>
+        <a ng-click="main.changeInclude('about')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">about</a>
       </li>
       <li class="nav-item">
-        <a ng-click="main.changeInclude('contact')" class="nav-link">contact</a>
+        <a ng-click="main.changeInclude('contact')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">contact</a>
       </li>
     </ul>
     <ul class="navbar-nav">
@@ -26,18 +26,18 @@
           {{main.currentUser}}
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a ng-click="main.changeInclude('user-view'); main.getUserCreatedGames()" class="dropdown-item nav-item nav-link">profile</a>
-              <a ng-click="main.changeInclude('game-create')" class="dropdown-item nav-item nav-link">add game</a>
+              <a ng-click="main.changeInclude('user-view'); main.getUserCreatedGames()" class="dropdown-item nav-item nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">profile</a>
+              <a ng-click="main.changeInclude('game-create')" class="dropdown-item nav-item nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">add game</a>
             <div class="dropdown-divider"></div>
-              <a ng-click="main.changeInclude('header'); main.logout()" class="dropdown-item nav-item nav-link">logout</a>
+              <a ng-click="main.changeInclude('header'); main.logout()" class="dropdown-item nav-item nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">logout</a>
         </div>
       </li>
       <!-- signup / login -->
       <li ng-if="main.showNavItem" class="nav-item">
-        <a ng-click="main.changeInclude('session-signup')" class="nav-link">signup</a>
+        <a ng-click="main.changeInclude('session-signup')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">signup</a>
       </li>
       <li ng-if="main.showNavItem" class="nav-item">
-        <a ng-click="main.changeInclude('session-login')" class="nav-link">login</a>
+        <a ng-click="main.changeInclude('session-login')" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show">login</a>
       </li>
     </ul>
   </div>
