fixed about.html alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -257,6 +257,9 @@ about
 .about {
   background: var(--white-tee);
   color: var(--night);
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .about > .container > .row > h1 {
