--- a/public/partials/game-create.html
+++ b/public/partials/game-create.html
@@ -1,37 +1,43 @@
 <!-- game add -->
-<div class="game-create" id="game-create">
-  <div>
-    <div>
-      <h1>add game</h1>
+<div class="game-create session" id="game-create">
+  <h1>add game</h1>
+  <form ng-submit="main.create()" class="px-5 py-5">
+    <!-- username -->
+    <div class="form-group">
+      <label for="username">username</label>
+      <input ng-model="main.currentUser" class="form-control" name="username" placeholder="{{main.currentUser}}" type="text" readonly>
     </div>
-    <form ng-submit="main.create()">
-      <!-- uuid -->
-      <div>
-        <input name="username" ng-model="main.currentUser" placeholder="{{main.currentUser}}" type="text" readonly>
-      </div>
-      <!-- title -->
-      <div>
-        <input ng-model="main.createForm.title" autocomplete="off" maxlength="50" minlength="2" placeholder="game title" type="text" required>
-      </div>
+    <!-- game title -->
+    <div class="form-group">
+      <label for="game title">game title <span class="form-asterisk">*</span></label>
+      <input ng-model="main.createForm.title" class="form-control" autocomplete="off" maxlength="50" minlength="2" placeholder="game title" type="text" required>
+    </div>
+    <div class="form-row">
       <!-- release date -->
-      <div>
-        <input ng-model="main.createForm.releaseDate" autocomplete="off" placeholder="release date" type="date" required>
+      <div class="form-group col-md-6">
+        <label for="release date">release date <span class="form-asterisk">*</span></label>
+        <input ng-model="main.createForm.releaseDate" class="form-control" autocomplete="off" placeholder="release date" type="date" required>
       </div>
       <!-- genre -->
-      <!-- NOTE change to dropdown selection menu? -->
-      <div>
-        <input ng-model="main.createForm.genre" autocomplete="off" maxlength="50" minlength="2" placeholder="genre" type="text" required>
+      <div class="form-group col-md-6">
+        <label for="genre">genre <span class="form-asterisk">*</span></label>
+        <div class="input-group mb-3">
+          <select ng-model="main.createFormGenreSeleted" ng-options="i for i in gameGenreSelection.genre" class="custom-select" required></select>
+        </div>
       </div>
-      <!-- image -->
-      <div>
-        <input ng-model="main.createForm.image" autocomplete="off" maxlength="100" minlength="5" placeholder="image url" type="url" required>
-      </div>
-      <!-- description -->
-      <div>
-        <input ng-model="main.createForm.description" autocomplete="off" maxlength="30" minlength="2" placeholder="description" type="text" required>
-      </div>
-      <!-- submit button -->
-      <button type="submit">submit</button>
-    </form>
-  </div>
+    </div>
+    <!-- image -->
+    <div class="form-group">
+      <label for="image url">image url <span class="form-asterisk">*</span></label>
+      <input ng-model="main.createForm.image" class="form-control" autocomplete="off" maxlength="500" minlength="5" placeholder="https://i.imgur.com/5S1u1OA.jpg" type="url" required>
+    </div>
+    <!-- description -->
+    <div class="form-group">
+      <label for="description">description <span class="form-asterisk">*</span></label>
+      <textarea ng-model="main.createForm.description" class="form-control" autocomplete="off" maxlength="5000" minlength="20" rows="8" cols="44" placeholder="Your awesome WASD.it story of [Game Title]" type="text" required></textarea>
+    </div>
+    <!-- create button -->
+    <button type="submit" class="btn btn-primary">create</button>
+  </form>
+  <a>hello, world!</a>
 </div> <!-- /.game-create -->
