fixed style for footer.html

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -165,6 +165,10 @@ session (login / signup)
   visibility: hidden;
 }
 
+
+/* all form button style
+---------------------------------------- */
+
 .btn {
   color: var(--night);
 }
@@ -199,6 +203,7 @@ button.btn.btn-primary:hover {
   background: var(--stain);
   border-color: var(--stain);
 }
+
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 game view(all)
@@ -315,14 +320,32 @@ footer
 .footer {
   background: var(--night);
   min-height: 30vh;
+  padding-top: 5em;
   /* position: relative; */
   /* bottom: 0; */
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.social-media {
-  margin: 2em 3em 0 3em;
+.footer > .container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
+.footer > div > div {
+  max-width: 700px;
+}
+
+.footer div.col-sm.col-sm-2, .footer div.col-sm.col-sm-1 {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.fa-envelope,
 .fa-github-alt,
 .fa-steam,
 .fa-twitch,
@@ -332,13 +355,14 @@ footer
   cursor: pointer;
   font-size: 3.7em;
   /* margin: 1.3em 0 0 0; */
-  margin: 0.5em;
+  margin-bottom: 0.5em;
   -moz-transition-duration: 800ms;
   -o-transition-duration: 800ms;
   -webkit-transition-duration: 800ms;
   transition-duration-duration: 800ms;
 }
 
+.fa-envelope:hover,
 .fa-github-alt:hover,
 .fa-steam:hover,
 .fa-twitch:hover,
@@ -358,13 +382,9 @@ footer
 
 .copy {
   color: var(--white-tee);
-  margin: 5em 0 0 0;
+  margin: 3em 0.7em 2em;
 }
 
-.copy > p > a {
+.copy > a {
   color: var(--energy);
-}
-
-.copy > p > a:hover {
-  text-decoration: none;
 }
