--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -1,6 +1,6 @@
 <!-- header -->
 <div class="header">
-  <div id="slide" class="carousel slide" data-ride="carousel">
+  <div id="slide" class="carousel slide" data-ride="carousel" data-interval="8000" data-wrap="true">
     <ol class="carousel-indicators">
       <li data-target="#slide" data-slide-to="0" class="active"></li>
       <li data-target="#slide" data-slide-to="1"></li>
@@ -31,12 +31,12 @@
       </div>
     </div>
     <!-- left controller -->
-    <a class="carousel-control-prev" href="#slide" role="button" data-slide="prev">
+    <a class="left carousel-control carousel-control-prev" href="#slide" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
     <!-- right controller -->
-    <a class="carousel-control-next" href="#slide" role="button" data-slide="next">
+    <a class="right carousel-control carousel-control-next" href="#slide" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
