update release date to release year

--- a/public/partials/game-view-all.html
+++ b/public/partials/game-view-all.html
@@ -17,7 +17,7 @@
           <!-- title -->
           <p>game title: {{games.title}}</p>
           <!-- release date -->
-          <p>release date: {{games.releaseDate}}</p>
+          <p>release year: {{games.releaseYear}}</p>
           <!-- genre -->
           <p>genre: {{games.genre}}</p>
           <!-- image -->
